# SmartWiki2

./: .env.example  .gitignore  ARCHITECTURE.md  Agents.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: docker.mdc  openrouter.mdc  publisher.mdc  vault-contract.mdc
app/: __init__.py  config.py  main.py
app/api/: ingest.py  lint.py  query.py  rebuild.py
app/llm/: openrouter_client.py  prompts.py  schemas.py
app/models/: __init__.py  page_types.py  source_manifest.py  vault_contract.py
app/services/: classifier.py  frontmatter.py  git_loader.py  ingest_scan_cli.py  ingester.py  linker.py  lint_cli.py  linter.py  pdf_generator.py  publisher.py  publisher_cli.py  raw_ingestor.py  synthesizer.py  vault_loader.py  vault_structure.py
app/util/: fs.py  markdown.py  slugs.py  timestamps.py
docker/: Dockerfile  entrypoint.sh
publisher/: sync_to_quartz.py
publisher/quartz/: package-lock.json  package.json  quartz.config.ts
publisher/quartz/scripts/: build.mjs
scripts/: bootstrap_vault.sh  clone_vault.sh  dev_shell.sh  ingest_scan.sh  lint_wiki.sh  rebuild_site.sh
tests/: test_instantiation_modes.py  test_linking.py  test_publish.py  test_raw_ingestor.py  test_vault_contract.py
